fix (CSS): prevent context menus from being hidden under other lists on mobile

--- a/src/components/Lists/lists.scss
+++ b/src/components/Lists/lists.scss
@@ -73,7 +73,7 @@
 		cursor: grabbing;
 	}
 
-	&:has(*:focus) {
+	&:focus-within {
 		z-index: 15;
 	}
 
